Styling fixes to mobile overflow issue + fine-tuning

--- a/css/hamburger.css
+++ b/css/hamburger.css
@@ -11,7 +11,7 @@
 
 #menuToggle {
     display: block;
-    position: relative;
+    position: absolute;
     top: 50px;
     left: 50px;
 
