--- a/css/styles.css
+++ b/css/styles.css
@@ -648,6 +648,10 @@ a.overlay-close {
     }
 }
 @media (max-width: 680px) {
+    button, a.btn {
+        width: 100%;
+        margin: 10px 0;
+    }
     .section.press .items,
     .section.dev .items,
     .section.faq .items {
@@ -691,6 +695,12 @@ a.overlay-close {
     .section.summary .row {
         margin: 0 -20px;
     }
+    .section.summary .stacks {
+        margin: 0;
+    }
+    .section.summary .key-ideas-column {
+        margin-bottom: 20px;
+    }
     .section.about-users {
         font-size: .92em;
         margin: 60px auto 50px;
@@ -704,20 +714,29 @@ a.overlay-close {
         margin: 50px 0;
     }
     .section.team {
-        margin-left: -80px;
-        margin-right: -80px;
+        margin-left: -30px;
+        margin-right: -30px;
+        padding-right: 30px;
+        padding-left: 30px;
         margin-bottom: 0;
         padding-bottom: 20px;
     }
-    .footer.links,
-    .footer.copyright {
+    .section.team .about-company {
+        margin-bottom: 40px;
+    }
+    .section.team .team-container .team-person {
+        min-height: 215px;
+    }
+    .footer .footer-links,
+    .footer .copyright {
         text-align: center;
         width: 100%;
         margin: 0;
         padding: 0;
     }
-    .section.summary .stacks {
-        margin: 0;
+    .footer .footer-links {
+        font-size: 16px;
+        margin-bottom: 10px;
     }
 }
 @media (max-width: 370px) {
